{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 202,
  "lineage": "2dae0318-cd4b-8f09-ec02-85a586bc2cc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Windows-Atividade",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03cd80cfebcbb4481",
            "arn": "arn:aws:ec2:us-east-1:928701300422:instance/i-08e6fb631ec9caba8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-08e6fb631ec9caba8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "TerraFormVitorWin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "dYr8NW8j6iu40ZwyLryDA8gU6qBDpq6fY/do3WkZvTQipMAqz2nwhvWr9bJIyTvmPXROoknzTzwXjDWvDXwLprJqR54GuTRzsPFc7l9xMs9gUaO+PVUh3DpYaES9xYYd3qVlx5P/GKPqPIuNosefgwJ4pxAOFSF17SFxodVvgMYnKGOuLygSwYUy1f9k9O0n0he6l4LJuXv9n1yMGSU4qALv2Yh0sWFBnVP2nSjBN1DHNubtKxt0g7aB8IM+oYzHBxIvGXx7sAedMFUq9eWbE7A7J5AktOGeqX0lcaM/eJTeD02o8XbE2Mfdp3SwSmZRQO77/9WP+6JkKrl9UZ55Gg==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fb24268adb9f7e9",
            "private_dns": "ip-172-18-1-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.18.1.139",
            "public_dns": "ec2-3-80-250-22.compute-1.amazonaws.com",
            "public_ip": "3.80.250.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "managed-by": "Terraform134",
                  "owner": "Vitor"
                },
                "throughput": 0,
                "volume_id": "vol-08ede86c43e35f1eb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe6a69e0e8f42ad6",
            "tags": {
              "Name": "Windows-Atividade"
            },
            "tags_all": {
              "Name": "Windows-Atividade",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf56cede6af175f5"
            ]
          },
          "dependencies": [
            "aws_security_group.Sec-Windows",
            "aws_subnet.SubRede-Pub1",
            "aws_vpc.ANEIS-VPC",
            "data.template_file.user_data_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-ANEIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:internet-gateway/igw-0b15ce11aba27db86",
            "id": "igw-0b15ce11aba27db86",
            "owner_id": "928701300422",
            "tags": {
              "Name": "IGW-ANEIS"
            },
            "tags_all": {
              "Name": "IGW-ANEIS",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rotas-ANEIS-Pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:route-table/rtb-0f5d13225281872b5",
            "id": "rtb-0f5d13225281872b5",
            "owner_id": "928701300422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Rotas-ANEIS-Pri"
            },
            "tags_all": {
              "Name": "Rotas-ANEIS-Pri",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rotas-ANEIS-Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:route-table/rtb-022a2a6fbcbe25783",
            "id": "rtb-022a2a6fbcbe25783",
            "owner_id": "928701300422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b15ce11aba27db86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rotas-ANEIS-Pub"
            },
            "tags_all": {
              "Name": "Rotas-ANEIS-Pub",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-ANEIS",
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubRede-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecc02ce29017a7a4",
            "route_table_id": "rtb-022a2a6fbcbe25783",
            "subnet_id": "subnet-0fe6a69e0e8f42ad6"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-ANEIS",
            "aws_route_table.Rotas-ANEIS-Pub",
            "aws_subnet.SubRede-Pub1",
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubRede-Pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4fbacc3fdcf8e24",
            "route_table_id": "rtb-022a2a6fbcbe25783",
            "subnet_id": "subnet-0bf85b5584e90dcd3"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-ANEIS",
            "aws_route_table.Rotas-ANEIS-Pub",
            "aws_subnet.SubRede-Pub2",
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sec-Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:security-group/sg-0cf56cede6af175f5",
            "description": "Liberar entrada RDP e PING",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf56cede6af175f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Sec-Windows",
            "name_prefix": "",
            "owner_id": "928701300422",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubRede-Pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:subnet/subnet-070fb7d5bb88df17c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.18.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070fb7d5bb88df17c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928701300422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRede-Pri1"
            },
            "tags_all": {
              "Name": "SubRede-Pri1",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubRede-Pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:subnet/subnet-0bf81be2c4836e657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf81be2c4836e657",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928701300422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRede-Pri2"
            },
            "tags_all": {
              "Name": "SubRede-Pri2",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubRede-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:subnet/subnet-0fe6a69e0e8f42ad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe6a69e0e8f42ad6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "928701300422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRede-Pub1"
            },
            "tags_all": {
              "Name": "SubRede-Pub1",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubRede-Pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:subnet/subnet-0bf85b5584e90dcd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.18.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf85b5584e90dcd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "928701300422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRede-Pub2"
            },
            "tags_all": {
              "Name": "SubRede-Pub2",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            },
            "vpc_id": "vpc-0b9ef27331bd6575b"
          },
          "dependencies": [
            "aws_vpc.ANEIS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ANEIS-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:928701300422:vpc/vpc-0b9ef27331bd6575b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-01bc656532945c7b7",
            "default_route_table_id": "rtb-0db355614b845b040",
            "default_security_group_id": "sg-071b4de0fd003a734",
            "dhcp_options_id": "dopt-0ded46b6ad46ba333",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9ef27331bd6575b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db355614b845b040",
            "owner_id": "928701300422",
            "tags": {
              "Name": "ANEIS-VPC"
            },
            "tags_all": {
              "Name": "ANEIS-VPC",
              "managed-by": "Terraform134",
              "owner": "Vitor"
            }
          }
        }
      ]
    }
  ]
}